# kitamanager

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.rst  child-payment-berlin.yaml  conftest.py  docker-compose.yml  docker-entrypoint.sh  env-dev-postgres  kitamanager-env-dev-postgres  manage.py  pytest.ini  tox.ini
django-kitamanager/: MANIFEST.in  pyproject.toml
django-kitamanager/docs/: conf.py  development.rst  index.rst
django-kitamanager/kitamanager/: admin.py  apps.py  bankimport.py  berlin.py  definitions.py  forms.py  forms_bank.py  sage_payroll.py  urls.py  views_bank.py  views_child.py  views_employee.py  views_statistic.py
django-kitamanager/kitamanager/admin/: __init__.py  area.py  bank.py  child.py  employee.py  revenue.py
django-kitamanager/kitamanager/management/commands/: child_import.py  childpayment_import.py  employee_import.py  employeepayment_import.py  revenue_berlin_import.py
django-kitamanager/kitamanager/migrations/: 0001_postgres_extensions.py  0002_initial.py  0003_childpaymenttable_hours.py  0004_alter_childpaymenttableentry_options_and_more.py
django-kitamanager/kitamanager/models/: __init__.py  area.py  bank.py  child.py  child_payment.py  common.py  employee.py  employee_payment.py  person.py  revenue.py
django-kitamanager/kitamanager/templates/kitamanager/: bankaccount_charts_sum_balance_by_month.js  bankaccount_list.html  base.html  base_js.html  child_detail.html  child_list.html  child_list_future.html  child_statistics.html  child_table.html.inc  child_table.inc.html  childcontract_charts_count_by_month.js  (+22 more)
django-kitamanager/kitamanager/templatetags/: kitamanagertags.py
django-kitamanager/kitamanager/tests/: common.py  test_admin_urls.py  test_bank_urls.py  test_berlin.py  test_child_urls.py  test_employee_urls.py  test_statistic_urls.py  test_urls.py
(+25 files in other folders)
